gap fixed

--- a/day-02-navbar/style.css
+++ b/day-02-navbar/style.css
@@ -80,7 +80,7 @@ nav {
 .nav-link {
     list-style: none;
     display: flex;
-    gap: 6px;
+    gap: 12px;
 }
 
 .nav-item {
